--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ footer {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
     border: 2px solid #e0e0e0;
-    width: 500px;
+    width: 300px;
     height: 480px;
     min-width: 300px;
     display: flex;
@@ -619,7 +619,7 @@ footer {
 .banner-app{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #fff;
     gap: 150px;
 }
@@ -639,7 +639,7 @@ footer {
 }
 
 
-.textte h2{
+.textte h1{
     font-size: 30px;
 }
 /* 
@@ -660,6 +660,102 @@ footer {
 .textte a:hover{
     transform: scale(1.05); 
     transition: 1.0s;
+}
+
+.banner-app img{
+    transition: transform 0.5s ease;
+
+}
+
+
+.banner-app img:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+} 
+
+/* Estilizando a seção de botão */
+#button-ft {
+    padding: 40px;
+    border-radius: 10px;
+    max-width: 800px;
+    margin: 0 auto;
+    font-family: 'Montserrat', Arial, sans-serif;
+
+}
+
+.button-ti {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 24px;
+    color: #333;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.button-pt {
+    width: 100%;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    padding: 20px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    text-align: left;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button-pt:hover {
+    background-color: #f0f0f0;
+    border-color: #ccc;
+}
+
+.txt-bu-ti {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    font-family: 'Montserrat', Arial, sans-serif;
+
+}
+
+.bt-content {
+    display: none;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #555;
+}
+
+.txt-button {
+    font-size: 16px;
+    color: #333;
+    font-family: 'Montserrat', Arial, sans-serif;
+
+}
+
+.bt-content.show {
+    display: block;
+}
+
+button:focus {
+    outline: none;
+    box-shadow: 0 0 5px #fa6300;
+}
+
+@media (max-width: 768px) {
+    #button-ft {
+        padding: 20px;
+    }
+
+    .button-ti {
+        font-size: 20px;
+    }
+
+    .button-pt {
+        padding: 15px;
+    }
+
+    .txt-bu-ti {
+        font-size: 16px;
+    }
 }
 
 
@@ -697,6 +793,22 @@ footer {
 
     .box {
         width: 100%;
+    }
+
+    #button-ft {
+        padding: 20px;
+    }
+
+    .button-ti {
+        font-size: 20px;
+    }
+
+    .button-pt {
+        padding: 15px;
+    }
+
+    .txt-bu-ti {
+        font-size: 16px;
     }
 }
 
