--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ footer {
     margin-bottom: 30px;
     font-size: 24px;
     color: #333;
-    font-weight: bold;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
@@ -711,7 +711,7 @@ footer {
 
 .txt-bu-ti {
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 500;
     color: #333;
     font-family: 'Montserrat', Arial, sans-serif;
 
@@ -932,4 +932,10 @@ button:focus {
     .textte a{
         padding: 35px;
     }
+
+    
+.logo{
+    width: 12%;
+}
+
 }
