--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ body {
     z-index: -1;
 }
 
-/* Filtro escuro na imagem */
 .banner::before {
     content: '';
     position: absolute;
@@ -327,6 +326,95 @@ footer {
     font-family: 'Montserrat', Arial, sans-serif;
 
 }
+
+.containerr{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    font-family: 'Montserrat', Arial, sans-serif;
+
+}
+
+.box-geral{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.containerr h4{
+    font-size: 30px;
+    text-align: center;
+    color: #005fa3;
+}
+
+/* .boxx{
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    border: 2px solid #e0e0e0;
+    width: 300px;
+    height: 500px;
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.boxx img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.boxx-content {
+    padding: 20px;
+}
+.boxx h3 {
+    color: #005fa3;
+    margin: 0 0 10px;
+    font-size: 1.2em;
+    padding: 20px;
+}
+.boxx p {
+    color: #555;
+    font-size: 14px;
+    margin-bottom: 15px;
+    padding: 20px;
+
+}
+.boxx a {
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: #ff7f00;
+    color: #fff;
+    border-radius: 40px;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'Montserrat', Arial, sans-serif;
+    display: flex;
+    width: 200px;
+    margin: 20px;
+
+}
+.boxx a:hover {
+    background-color: #004869;
+    color: white;
+    transition: 0.3s;
+} */
+
+
+
+
 .box {
     background: white;
     border-radius: 10px;
@@ -335,11 +423,13 @@ footer {
     text-align: left;
     border: 2px solid #e0e0e0;
     width: 300px;
-    height: 480px;
+    height: 545px;
     min-width: 300px;
     display: flex;
     flex-direction: column;
 }
+
+
 .box img {
     width: 100%;
     height: 200px;
@@ -935,7 +1025,7 @@ button:focus {
 
     
 .logo{
-    width: 12%;
+    width: 20%;
 }
 
 }
