--- a/login/style.css
+++ b/login/style.css
@@ -495,6 +495,11 @@ footer {
     .banner-img {
         display: none;
     }
+
+    .text{
+        text-align: left;
+       }
+    
     
 }
 
@@ -503,6 +508,7 @@ footer {
         display: none;
     }
 
+
 }
 
 @media (max-width: 480px) {
@@ -510,9 +516,19 @@ footer {
     display: none;
    }
 
+   .text{
+    text-align: left;
+   }
+
    .text h1 {
     padding: 100px;
-}
+
+    }
+
+    .text p{
+        padding: 100px;
+    }
+
 
 
 }
